# parallel

./: hello.c  integrate.c  readme.md  serial-integrate.c
cuda/Problem Set 3/: student_func.cu
cuda/Problem Set 3/notes/: cuda3_notes.tex
cuda/prog1/: student_func.cu
cuda/prog1/notes/: cuda1_notes.tex
cuda/prog2/: student_func.cu
cuda/prog2/notes/: cuda2_notes.tex
cuda/prog4/: student_func.cu
cuda/prog6/: student_func.cu
cuda/prog6/notes/: cuda6_notes.tex
hw1/: comp_all  count_sort.c  count_sort.html  count_sort.md  custom_count_sort.c  exercises.html  exercises.md  main.c  qsorttest.c  run_all  sync-integrate.c  workflow-integrate.c
hw2/phase1/: Makefile  phase1-explanations.tex  pthreads-dp.c  pthreads-pro-con.c  pthreads-read-write.c
hw2/phase2/: Makefile  matmul_static.c  matmul_static_openmp.c  pt_matmul_static.c
hw2/phase2/readme/: hw2_stage2_readme.tex
omp/: CMakeLists.txt  linked.c  mandel.c
pthreads/: hello.c
